--- a/index.htm
+++ b/index.htm
@@ -42,5 +42,28 @@
             <a class="main-link" href="#">QABULGA YOZILISH</a>
         </div>
     </header>
+
+    <!--    SITE-FOOTER -->
+    <footer class="site-footer">
+        <div class="site-footer-container container">
+            <a class="site-logo site-logo-site-footer" href="index.htm">
+                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon.jpg2x">
+                <span class="site-logo-text">AnsorMed</span>
+            </a>
+
+            <!-- SITENAV -->
+            <div class="site-header-actions">
+                <nav class="sitenav sitenav-site-footer">
+                    <ul class="sitenav-list">
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">XIZMATLAR</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">DORILAR</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">ASAL</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">KONTAKTLAR</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">BLOG</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
