Add main-content hero

--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,64 @@
         </div>
     </header>
 
+
+    <!-- MAIN-CONTENT -->
+    <main>
+        <section class="hero">
+            <div class="hero-container container">
+                <div class="hero-content">
+                    <h2 class="hero-headeng">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
+                    <p class="hero-text"> Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
+                    <a class="main-link main-link-solid" href="#">QABULGA YOZILISH</a>
+                </div>
+                <img class="hero-img" src="./img/hero-img .png" alt="Duhtir akani rasmi" width="423" height="504" srcset="./img/hero-img .png 1x, ./img/hero-img .png2x">
+            </div>
+        </section>
+
+        <!-- INDEX-SERVICES -->
+        <section class="index-services">
+            <div class="container">
+                <h2 class="index-services-headeng">Xizmatlar</h2>
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="./img/image 1.jpg" alt="Hijo idishini rasmi" srcset="./img/image 1.jpg 1x , ./img/image 1.jpg2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Hijoma</h3>
+                            <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="./img/image 1.jpg" alt="Hijo idishini rasmi" srcset="./img/image 1.jpg 1x , ./img/image 1.jpg2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Hijoma</h3>
+                            <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="./img/image 1.jpg" alt="Hijo idishini rasmi" srcset="./img/image 1.jpg 1x , ./img/image 1.jpg2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Hijoma</h3>
+                            <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="./img/image 1.jpg" alt="Hijo idishini rasmi" srcset="./img/image 1.jpg 1x , ./img/image 1.jpg2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Hijoma</h3>
+                            <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+
     <!--    SITE-FOOTER -->
     <footer class="site-footer">
         <div class="site-footer-container container">
