Add cta section.Add links to cta section

--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
                     </ul>
                 </nav>
             </div>
-            <a class="main-link" href="#">QABULGA YOZILISH</a>
+            <a class="main-link" href="#index-cta">QABULGA YOZILISH</a>
         </div>
     </header>
 
@@ -51,7 +51,7 @@
                 <div class="hero-content">
                     <h2 class="hero-headeng">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
                     <p class="hero-text"> Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
-                    <a class="main-link main-link-solid" href="#">QABULGA YOZILISH</a>
+                    <a class="main-link main-link-solid" href="#index-cta">QABULGA YOZILISH</a>
                 </div>
                 <img class="hero-img" src="./img/hero-img .png" alt="Duhtir akani rasmi" width="423" height="504" srcset="./img/hero-img .png 1x, ./img/hero-img .png2x">
             </div>
@@ -102,7 +102,19 @@
                 </ul>
 
                 <div class="index-serviced-action">
-                    <a class="main-link" href="#">QABULGA YOZILISH</a>
+                    <a class="main-link" href="#index-cta">QABULGA YOZILISH</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- CTA -->
+
+        <section class="cta" id="index-cta">
+            <div class="cta-container container">
+                <h2 class="cta-heading">Qabulga ro’yxatdan o’ting</h2>
+                <div class="cta-link">
+                    <a class="cta-links-imem main-link main-link-outline" href="tell:+998903332226" >Qo’ng’iroq qilish</a>
+                    <a class="cta-links-imem main-link main-link-outline" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
                 </div>
             </div>
         </section>
