add site transitio

--- a/index.htm
+++ b/index.htm
@@ -113,8 +113,8 @@
             <div class="cta-container container">
                 <h2 class="cta-heading">Qabulga ro’yxatdan o’ting</h2>
                 <div class="cta-link">
-                    <a class="cta-links-imem main-link main-link-outline" href="tell:+998903332226" >Qo’ng’iroq qilish</a>
-                    <a class="cta-links-imem main-link main-link-outline" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
+                    <a class="cta-links-item main-link main-link-outline" href="tell:+998903332226" >Qo’ng’iroq qilish</a>
+                    <a class="cta-links-item main-link main-link-outline" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
                 </div>
             </div>
         </section>
