--- a/index.htm
+++ b/index.htm
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Gogle Fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Gogle Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-      <!-- Styles -->
-      <link rel="icon" type="image/png" href="./img/iconDT.png">
-      <link rel="stylesheet" href="./css/normalize .css">
-      <link rel="stylesheet" href="./css/styal.css">
+    <!-- Styles -->
+    <link rel="icon" type="image/png" href="./img/iconDT.png">
+    <!-- <link rel="stylesheet" href="./css/normalize .css"> -->
+    <!-- <link rel="stylesheet" href="./css/styal.css"> -->
+    <link rel="stylesheet" href="./css/styles.min.css">
 
-      <title>AnsorMed</title>
+    <title>AnsorMed</title>
 </head>
 <body>
 
