--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,9 @@
 
     <!-- Styles -->
     <link rel="icon" type="image/png" href="./img/iconDT.png">
-    <!-- <link rel="stylesheet" href="./css/normalize .css"> -->
-    <!-- <link rel="stylesheet" href="./css/styal.css"> -->
-    <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styal.css">
+    <!-- <link rel="stylesheet" href="./css/styles.min.css"> -->
 
     <title>AnsorMed</title>
 </head>
@@ -24,7 +24,7 @@
     <header class="site-header">
         <div class="site-header-container container">
             <a class="site-logo" href="index.htm">
-                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon.jpg2x">
+                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon@2x.jpg 2x">
                 <span class="site-logo-text">AnsorMed</span>
             </a>
 
@@ -53,7 +53,7 @@
                     <p class="hero-text"> Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
                     <a class="main-link main-link-solid" href="#index-cta">QABULGA YOZILISH</a>
                 </div>
-                <img class="hero-img" src="./img/hero-img .png" alt="Duhtir akani rasmi" width="423" height="504" srcset="./img/hero-img .png 1x, ./img/hero-img .png2x">
+                <img class="hero-img" src="./img/hero-img.png" alt="Duhtir akani rasmi" width="423" height="504" srcset="./img/hero-img.png 1x, ./img/hero-img@2x.png 2x">
             </div>
         </section>
 
@@ -63,7 +63,7 @@
                 <h2 class="index-services-headeng">Xizmatlar</h2>
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/image 1.jpg" alt="Hijo idishini rasmi" srcset="./img/image 1.jpg 1x , ./img/image 1.jpg2x">
+                        <img class="index-service-img" src="./img/dorilar.jpg" alt="Hijo idishini rasmi" srcset="./img/dorilar.jpg 1x , ./img/dorilar@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Hijoma</h3>
                             <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
@@ -73,7 +73,7 @@
 
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/image 2.jpg" alt="Hijo idishini rasmi" srcset="./img/image 2.jpg 1x, ./img/image 2.jpg2x">
+                        <img class="index-service-img" src="./img/massaj.jpg" alt="Hijo idishini rasmi" srcset="../img/massaj.jpg 1x, ./img/massaj@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Manual terapiya</h3>
                             <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
@@ -83,7 +83,7 @@
 
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/image 3.jpg" alt="Hijo idishini rasmi" srcset="./img/image 3.jpg 1x, ./img/image 3.jpg2x">
+                        <img class="index-service-img" src="./img/zulik-bilan-davolash.jpg" alt="Hijo idishini rasmi" srcset="./img/zulik-bilan-davolash.jpg 1x, ./img/zulik-bilan-davolash@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Zuluk bilan davolash</h3>
                             <p class="index-service-discription">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
@@ -93,7 +93,7 @@
 
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/image 3-1.jpg" alt="Hijo idishini rasmi" srcset="./img/image 3-1.jpg 1x, ./img/image 3-1.jpg2x">
+                        <img class="index-service-img" src="./img/asal-bilan-davolash.jpg" alt="Hijo idishini rasmi" srcset="./img/asal-bilan-davolash.jpg 1x, ./img/asal-bilan-davolash@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Tabiiy dori vositalari</h3>
                             <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
@@ -124,7 +124,7 @@
     <footer class="site-footer">
         <div class="site-footer-container container">
             <a class="site-logo site-logo-site-footer" href="index.htm">
-                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon.jpg2x">
+                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon@2x.jpg 2x">
                 <span class="site-logo-text">AnsorMed</span>
             </a>
 
