--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
                 <h2 class="index-services-headeng">Xizmatlar</h2>
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/dorilar.jpg" alt="Hijo idishini rasmi" srcset="./img/dorilar.jpg 1x , ./img/dorilar@2x.jpg 2x">
+                        <img class="index-service-img" src="./img/dorilar.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="./img/dorilar.jpg 1x , ./img/dorilar@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Hijoma</h3>
                             <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
@@ -73,7 +73,7 @@
 
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/massaj.jpg" alt="Hijo idishini rasmi" srcset="../img/massaj.jpg 1x, ./img/massaj@2x.jpg 2x">
+                        <img class="index-service-img" src="./img/massaj.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="../img/massaj.jpg 1x, ./img/massaj@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Manual terapiya</h3>
                             <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
@@ -83,7 +83,7 @@
 
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/zulik-bilan-davolash.jpg" alt="Hijo idishini rasmi" srcset="./img/zulik-bilan-davolash.jpg 1x, ./img/zulik-bilan-davolash@2x.jpg 2x">
+                        <img class="index-service-img" src="./img/zulik-bilan-davolash.jpg" widht:200; height:200; alt="Hijo idishini rasmi" srcset="./img/zulik-bilan-davolash.jpg 1x, ./img/zulik-bilan-davolash@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Zuluk bilan davolash</h3>
                             <p class="index-service-discription">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
@@ -93,7 +93,7 @@
 
                 <ul class="index-services-list">
                     <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/asal-bilan-davolash.jpg" alt="Hijo idishini rasmi" srcset="./img/asal-bilan-davolash.jpg 1x, ./img/asal-bilan-davolash@2x.jpg 2x">
+                        <img class="index-service-img" src="./img/asal-bilan-davolash.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="./img/asal-bilan-davolash.jpg 1x, ./img/asal-bilan-davolash@2x.jpg 2x">
                         <div class="index-service-content">
                             <h3 class="index-service-title">Tabiiy dori vositalari</h3>
                             <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
