--- a/index.htm
+++ b/index.htm
@@ -21,88 +21,88 @@
 <body>
 
     <!-- SITE-HEADER -->
-    <header class="site-header">
-        <div class="site-header-container container">
-            <a class="site-logo" href="index.htm">
-                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon@2x.jpg 2x">
-                <span class="site-logo-text">AnsorMed</span>
+    <header class="header">
+        <div class="header__container container">
+            <a class="logo" href="index.htm">
+                <img class="logo__img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon@2x.jpg 2x">
+                <span class="logo__text">AnsorMed</span>
             </a>
 
             <!-- SITENAV -->
-            <div class="site-header-actions">
+            <div class="header__actions">
                 <nav class="sitenav">
-                    <ul class="sitenav-list">
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">XIZMATLAR</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">DORILAR</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">ASAL</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">KONTAKTLAR</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">BLOG</a></li>
+                    <ul class="sitenav__list">
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">XIZMATLAR</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">DORILAR</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">ASAL</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">KONTAKTLAR</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">BLOG</a></li>
                     </ul>
                 </nav>
             </div>
-            <a class="main-link" href="#index-cta">QABULGA YOZILISH</a>
+            <a class="button" href="#index-cta">QABULGA YOZILISH</a>
         </div>
     </header>
 
     <!-- MAIN-CONTENT -->
     <main>
         <section class="hero">
-            <div class="hero-container container">
-                <div class="hero-content">
-                    <h2 class="hero-headeng">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
-                    <p class="hero-text"> Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
-                    <a class="main-link main-link-solid" href="#index-cta">QABULGA YOZILISH</a>
+            <div class="hero__container container">
+                <div class="hero__content">
+                    <h2 class="hero__headeng">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
+                    <p class="hero__text"> Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
+                    <a class="button button--solid" href="#index-cta">QABULGA YOZILISH</a>
                 </div>
-                <img class="hero-img" src="./img/hero-img.png" alt="Duhtir akani rasmi" width="423" height="504" srcset="./img/hero-img.png 1x, ./img/hero-img@2x.png 2x">
+                <img class="hero__img" src="./img/hero-img.png" alt="Duhtir akani rasmi" width="423" height="504" srcset="./img/hero-img.png 1x, ./img/hero-img@2x.png 2x">
             </div>
         </section>
 
         <!-- INDEX-SERVICES -->
         <section class="index-services">
-            <div class="index-services-container container">
-                <h2 class="index-services-headeng">Xizmatlar</h2>
-                <ul class="index-services-list">
-                    <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/dorilar.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="./img/dorilar.jpg 1x , ./img/dorilar@2x.jpg 2x">
-                        <div class="index-service-content">
-                            <h3 class="index-service-title">Hijoma</h3>
-                            <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+            <div class="index-services__container container">
+                <h2 class="index-services__headeng">Xizmatlar</h2>
+                <ul class="index-services__list">
+                    <li class="index-services__item index-service">
+                        <img class="index-service__img" src="./img/dorilar.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="./img/dorilar.jpg 1x , ./img/dorilar@2x.jpg 2x">
+                        <div class="index-service__content">
+                            <h3 class="index-service__title">Hijoma</h3>
+                            <p class="index-service__discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
                         </div>
                     </li>
                 </ul>
 
-                <ul class="index-services-list">
-                    <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/massaj.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="../img/massaj.jpg 1x, ./img/massaj@2x.jpg 2x">
-                        <div class="index-service-content">
-                            <h3 class="index-service-title">Manual terapiya</h3>
-                            <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+                <ul class="index-services__list">
+                    <li class="index-services__item index-service">
+                        <img class="index-service__img" src="./img/massaj.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="../img/massaj.jpg 1x, ./img/massaj@2x.jpg 2x">
+                        <div class="index-service__content">
+                            <h3 class="index-service__title">Manual terapiya</h3>
+                            <p class="index-service__discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
                         </div>
                     </li>
                 </ul>
 
-                <ul class="index-services-list">
-                    <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/zulik-bilan-davolash.jpg" widht:200; height:200; alt="Hijo idishini rasmi" srcset="./img/zulik-bilan-davolash.jpg 1x, ./img/zulik-bilan-davolash@2x.jpg 2x">
-                        <div class="index-service-content">
-                            <h3 class="index-service-title">Zuluk bilan davolash</h3>
-                            <p class="index-service-discription">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
+                <ul class="index-services__list">
+                    <li class="index-services__item index-service">
+                        <img class="index-service__img" src="./img/zulik-bilan-davolash.jpg" widht:200; height:200; alt="Hijo idishini rasmi" srcset="./img/zulik-bilan-davolash.jpg 1x, ./img/zulik-bilan-davolash@2x.jpg 2x">
+                        <div class="index-service__content">
+                            <h3 class="index-service__title">Zuluk bilan davolash</h3>
+                            <p class="index-service__discription">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
                         </div>
                     </li>
                 </ul>
 
-                <ul class="index-services-list">
-                    <li class="index-services-item index-service">
-                        <img class="index-service-img" src="./img/asal-bilan-davolash.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="./img/asal-bilan-davolash.jpg 1x, ./img/asal-bilan-davolash@2x.jpg 2x">
-                        <div class="index-service-content">
-                            <h3 class="index-service-title">Tabiiy dori vositalari</h3>
-                            <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+                <ul class="index-services__list">
+                    <li class="index-services__item index-service">
+                        <img class="index-service__img" src="./img/asal-bilan-davolash.jpg" alt="Hijo idishini rasmi" widht:200; height:200; srcset="./img/asal-bilan-davolash.jpg 1x, ./img/asal-bilan-davolash@2x.jpg 2x">
+                        <div class="index-service__content">
+                            <h3 class="index-service__title">Tabiiy dori vositalari</h3>
+                            <p class="index-service__discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
                         </div>
                     </li>
                 </ul>
 
-                <div class="index-serviced-action">
-                    <a class="main-link" href="#index-cta">QABULGA YOZILISH</a>
+                <div class="index-serviced__action">
+                    <a class="button" href="#index-cta">QABULGA YOZILISH</a>
                 </div>
             </div>
         </section>
@@ -113,8 +113,8 @@
             <div class="cta-container container">
                 <h2 class="cta-heading">Qabulga ro’yxatdan o’ting</h2>
                 <div class="cta-link">
-                    <a class="cta-links-item main-link main-link-outline" href="tell:+998903332226" >Qo’ng’iroq qilish</a>
-                    <a class="cta-links-item main-link main-link-outline" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
+                    <a class="cta-links-item button button--outline" href="tell:+998903332226" >Qo’ng’iroq qilish</a>
+                    <a class="cta-links-item button button--outline" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
                 </div>
             </div>
         </section>
@@ -122,21 +122,21 @@
 
     <!--    SITE-FOOTER -->
     <footer class="site-footer">
-        <div class="site-footer-container container">
-            <a class="site-logo site-logo-site-footer" href="index.htm">
-                <img class="site-logo-img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon@2x.jpg 2x">
+        <div class="site-footer__container container">
+            <a class="logo site-footer__logo" href="index.htm">
+                <img class="logo__img" src="./img/logo-icon.jpg" alt="AnsorMed logo-icon rasmi" width="50" height="50" srcset="./img/logo-icon.jpg 1x, ./img/logo-icon@2x.jpg 2x">
                 <span class="site-logo-text">AnsorMed</span>
             </a>
 
             <!-- SITENAV -->
-            <div class="site-header-actions">
-                <nav class="sitenav sitenav-site-footer">
-                    <ul class="sitenav-list">
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">XIZMATLAR</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">DORILAR</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">ASAL</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">KONTAKTLAR</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">BLOG</a></li>
+            <div class="header__actions">
+                <nav class="sitenav sitenav__site-footer">
+                    <ul class="sitenav__list">
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">XIZMATLAR</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">DORILAR</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">ASAL</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">KONTAKTLAR</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="#">BLOG</a></li>
                     </ul>
                 </nav>
             </div>
