--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,9 @@
 
     <!-- Styles -->
     <link rel="icon" type="image/png" href="./img/iconDT.png">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/styal.css">
-    <!-- <link rel="stylesheet" href="./css/styles.min.css"> -->
+    <!-- <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styal.css"> -->
+    <link rel="stylesheet" href="./css/styles.min.css">
 
     <title>AnsorMed</title>
 </head>
